# liq-evolution

./: .gitignore  README.md  pyproject.toml
docs/: regime_program_guide.md
examples/: artifact_replay_demo.py  baseline_regime_preset_demo.py  evolve_trading_strategy.py  regime_switching_demo.py  stability_first_regime_preset_demo.py  two_stage_evolution.py
examples/seed_configs/: ema_crossover.json  trend_regime.yaml
results/regime-phase4/comparison/seed-17/: paired_evolution.json
results/regime-phase4/comparison/seed-23/: paired_evolution.json
results/regime-phase4/comparison/seed-7/: paired_evolution.json
results/regime-phase4/evolved/seed-17/: evolution_summary.json
results/regime-phase4/evolved/seed-23/: evolution_summary.json
results/regime-phase4/evolved/seed-7/: evolution_summary.json
results/regime-phase4/trained/seed-17/: evolution_summary.json  summary.md
results/regime-phase4/trained/seed-23/: evolution_summary.json  summary.md
results/regime-phase4/trained/seed-7/: evolution_summary.json  summary.md
src/liq/evolution/: __init__.py  artifacts.py  config.py  errors.py  phase4_detector_swap.py  presets.py  protocols.py  regime_model.py  seeds.py  template_expander.py
src/liq/evolution/adapters/: __init__.py  artifact_store.py  parallel_eval.py  runner_strategy.py  signal_output.py  signals_provider.py  store_cache.py
src/liq/evolution/cli/: __init__.py  main.py
tests/: conftest.py  test_artifacts_schema.py  test_config.py  test_config_bridge.py  test_config_validation.py  test_contracts.py  test_errors.py  test_imports.py  test_integration_e2e.py  test_phase4_detector_swap.py  test_regime_model_contracts.py  test_regime_presets.py  test_seed_config.py  test_seed_injection_prior.py  test_seed_payloads.py  test_seeds.py  test_template_expander.py  test_trained_regime_detector_terminal.py  test_trained_regime_terminal.py
tests/adapters/: test_artifact_store_bridge.py  test_parallel_eval.py  test_parallel_eval_ray.py  test_parallel_memory.py  test_runner_strategy.py  test_runner_strategy_regime.py  test_signals_provider.py  test_store_cache_edge_cases.py  test_store_cache_persistent.py  test_strategy_spec.py
tests/cli/: test_main.py  test_main_detector_source.py
tests/eval/: test_walkforward.py
tests/evolution/: test_batch_eval.py  test_integration.py  test_reexports.py
tests/fitness/: test_behavior_descriptors.py  test_eval_cache.py  test_eval_cache_edge_cases.py  test_evaluation_metadata_contract.py  test_evaluation_schema_edge_cases.py  test_label_metrics.py  test_multifidelity.py  test_objectives.py  test_runner_backtest.py  test_runner_backtest_regime.py  test_stage_a_gate.py  test_strategy_evaluator.py  test_strategy_evaluator_edge_cases.py  test_strategy_evaluator_metrics.py  test_strategy_evaluator_regime_shift.py  test_two_stage.py
tests/integration/: test_end_to_end_robust_pipeline.py  test_parallel_memory.py
tests/primitives/: test_feature_context.py  test_indicator_throughput.py  test_indicators_liq_ta.py  test_ops_comparison.py  test_ops_crossover.py  test_ops_logic.py  test_ops_numeric.py  test_ops_temporal.py  test_registry.py  test_series_sources.py
tests/primitives/benchmarks/: indicator_throughput_baseline.json
tests/program/: test_ast.py  test_eval.py  test_genome.py
tests/qd/: __init__.py  test_orchestrator.py
tests/validation/: test_constraints.py  test_constraints_edge_cases.py  test_constraints_regime.py
(+53 files in other folders)
