[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liq-evolution"
version = "0.1.0"
description = "Trading strategy evolution layer for the LIQ Stack"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Latent Infinity", email = "dev@latentinfinity.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "liq-gp>=0.1.0",
    "liq-core>=0.1.0",
    "liq-signals>=0.1.0",
    "liq-ta>=0.1.0",
    "numpy>=1.26",
    "polars>=0.20",
    "pydantic>=2.0",
    "rich>=13.0",
    "structlog>=24.0",
    "typer>=0.12",
]

[project.optional-dependencies]
# runner = ["liq-core", "liq-runner", "liq-signals"]  # uncomment when available
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.14",
    "ty>=0.0.1",
]

[project.urls]
Homepage = "https://github.com/Latent-Infinity/liq-evolution"
Repository = "https://github.com/Latent-Infinity/liq-evolution"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.14",
    "ty>=0.0.1",
]

[tool.uv.sources]
liq-gp = { path = "../liq-gp", editable = true }
liq-ta = { path = "../liq-ta/crates/liq-ta-python", editable = true }
liq-core = { path = "../liq-core", editable = true }
liq-signals = { path = "../liq-signals", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/liq"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ARG",   # test protocol stubs must match signatures
    "E731",  # lambda assignments common in test fixtures
    "SIM105", # try/except/pass intentional in performance tests
]

[tool.ruff.lint.isort]
known-first-party = ["liq"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
extra-paths = [
    "./src",
    "../liq-core/src",
    "../liq-gp/src",
    "../liq-signals/src",
    "../liq-ta/crates/liq-ta-python/src",
    "../liq-store/src",
]

[tool.ty.rules]
# Start permissive -- tighten incrementally

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=liq.evolution --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/liq/evolution"]
omit = [
    "src/liq/evolution/adapters/signals_provider.py",  # requires liq-core (not yet available)
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "\\.\\.\\.",
]
